# algo-trade

./: .dockerignore  .env.example  .gitignore  AI_DEVELOPMENT_LIFECYCLE.md  Dockerfile.base  Dockerfile.dev  Dockerfile.prod  GEMINI.md  Makefile  Makefile.docker  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
agents/personas/: 01_master_orchestrator.yaml  02_architecture_analysis.yaml  03_feature_implementation.yaml  04_security_review.yaml  05_ml_specialist.yaml  06_domain_research.yaml  07_e2e_testing.yaml  08_observability_analysis.yaml  09_debug_rca.yaml  10_documentation.yaml  11_deployment.yaml
config/: config.yaml  metrics.yaml  queries.yaml
docs/architecture/: system_architecture.md
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml  queries.yaml
src/api/: README.md  chart_routes.py  config_sync.py  dependencies.py  integrations.py  main.py  models.py  server.py
src/api/routers/: status.py
src/api/routes/: configuration.py  control.py  data.py  system.py
src/auth/: auth_server.py  authenticator.py  token_manager.py
src/auth/templates/: auth_error.html  auth_home.html  auth_success.html
src/broker/: backfill_manager.py  connection_manager.py  instrument_manager.py  rest_client.py  websocket_client.py
src/cli/: models.py  state_manager.py
src/core/: candle_validator.py  feature_calculator.py  feature_engineering_pipeline.py  feature_validator.py  historical_aggregator.py  labeler.py  live_aggregator.py
src/core/indicators/: MIGRATION_GUIDE.md  __init__.py  main.py
src/core/indicators/base/: __init__.py  base_indicator.py  indicator_registry.py
src/core/indicators/cycle/: __init__.py  ht_dcperiod.py  ht_phasor.py  ht_trendline.py
src/core/indicators/enhanced/: __init__.py  breakout_indicators.py  mean_reversion_signals.py  momentum_ratios.py  trend_confirmations.py  volatility_adjustments.py
src/core/indicators/momentum/: __init__.py  cmo.py  rsi.py  stoch.py  willr.py
src/core/indicators/other/: __init__.py  bop.py  cci.py  trange.py  ultosc.py
src/core/indicators/trend/: __init__.py  adx.py  aroon.py  macd.py  sar.py
src/core/indicators/volatility/: __init__.py  atr.py  bbands.py  stddev.py
src/core/indicators/volume/: __init__.py  adosc.py  obv.py
src/database/: chart_repo.py  db_utils.py  feature_repo.py  instrument_repo.py  label_repo.py  label_stats_repo.py  migrate.py  model_repo.py  models.py  ohlcv_repo.py  processing_state_repo.py  signal_repo.py
src/database/migrations/: v1_initial.sql  v2_feature_engineering.sql  v2_indexes.sql  v3_continuous_aggs.sql  v4_policies.sql  v5_labeling_stats.sql  v6_processing_state.sql  v7_system_instrument.sql  v8_path_adjusted_return.sql
src/historical/: fetcher.py  processor.py
src/live/: candle_buffer.py  stream_consumer.py  tick_queue.py  tick_validator.py
src/metrics/: __init__.py  registry.py
src/model/: lgbm_trainer.py  predictor.py
src/signal/: alert_system.py  generator.py
src/state/: error_handler.py  health_monitor.py  system_state.py
src/utils/: config_loader.py  data_quality.py  dependency_container.py  env_utils.py  historical_pipeline_manager.py  live_pipeline_manager.py  logger.py  market_calendar.py  performance_metrics.py  processing_decision_engine.py  rate_limiter.py  scheduler.py  time_helper.py  time_synchronizer.py
src/validation/: candle_validator.py  consistency_validator.py  factory.py  feature_validator.py  interfaces.py  models.py  outlier_detector.py
src/validation/rules/: parsers.py  registry.py
tests/: test_labeler.py  test_main_orchestration.py
tests/auth/: test_authenticator.py  test_token_manager.py
tests/broker/: test_backfill_manager.py  test_connection_manager.py  test_rest_client.py  test_websocket_client.py
tests/core/: test_candle_validator.py  test_enhanced_feature_validator.py  test_feature_calculator.py  test_feature_engineering_pipeline.py  test_feature_validator.py  test_historical_aggregator.py  test_labeler.py  test_live_aggregator.py
tests/database/: test_db_utils.py  test_instrument_repo.py  test_ohlcv_repo.py
tests/utils/: test_feature_validation_registry.py  test_outlier_handling.py
tests/validation/: README.md  comprehensive_config_mock.py  config_loader_mock.py  conftest.py  test_candle_validator.py  test_comprehensive_edge_cases.py  test_config.py  test_fixtures.py  test_outlier_detector.py
ui/: README.md  index.html  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: theme-provider.tsx  theme-toggle.tsx
ui/src/components/layout/: header.tsx  sidebar.tsx
ui/src/components/ui/: badge.tsx  button.tsx
ui/src/hooks/: use-theme.ts
ui/src/pages/: calendar.tsx  charts.tsx  configuration.tsx  dashboard.tsx  data-management.tsx  indicators.tsx  instruments.tsx  models.tsx  monitoring.tsx
ui/src/types/: config.ts
workflows/execution/: execution-plan.md
